--- a/index.html
+++ b/index.html
@@ -26,18 +26,33 @@
                     <ul>
                         <li>
                             <a href="">
-                                <span class="fa fa-home"></span>
+                                <span class="fa fa-igloo"></span>
                                 <span>Início</span>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <span class="fa fa-search"></span>
+                                <span class="fa fa-glasses"></span>
                                 <span>Buscar</span>
                             </a>
                         </li>
                     </ul>
                 </div>
+            </div>
+        </nav>
+    </div>
+    <div class="library">
+        <nav class="library__navigation">
+            <div>
+                <ul>
+                    <li>
+                        <a href="">
+                            <span class="fa fa-book-dead"></span>
+                            <span>Sua biblioteca</span>
+                            <span class="fa fa-plus"></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </div>
